--- a/index.html
+++ b/index.html
@@ -15,30 +15,30 @@
     <li><a href="section1" target="section1">travel</a></li>
    </ul>
   </nav>
-  
+
  <section1>
-   <img src="посилання01">
+   <img src="f1">
    <p>Livestyle</p>
      <h2>More than just a music festival</h2>
 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis, recusandae temporibus officiis soluta, accusantium at laudantium repellat, doloribus ducimus architecto molestiae est a. Ea culpa laboriosam, aliquid vel unde atque laudantium explicabo facilis. Dignissimos nesciunt doloribus delectus dicta excepturi. Debitis officia, nisi error unde laudantium nulla iure distinctio fuga asperiores nihil magnam? Nesciunt omnis non distinctio harum amet sunt porro.</p> 
   </section1>
   
   <section2>
-   <img src="посилання02">
+   <img src="f2">
    <p>Livestyle</p>
    <h2>Life tastes better with coffee</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis, recusandae temporibus officiis soluta, accusantium at laudantium repellat, doloribus ducimus architecto molestiae est a. Ea culpa laboriosam, aliquid vel unde atque laudantium explicabo facilis. Dignissimos nesciunt doloribus delectus dicta excepturi. Debitis officia, nisi error unde laudantium nulla iure distinctio fuga asperiores nihil magnam? Nesciunt omnis non distinctio harum amet sunt porro.</p> 
     </section2>
   
     <section3>
-   <img src="посилання03">
+   <img src="f3">
    <p>photodiary</p>
    <h2>American dream</h2>
    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis, recusandae temporibus officiis soluta, accusantium at laudantium repellat, doloribus ducimus architecto molestiae est a. Ea culpa laboriosam, aliquid vel unde atque laudantium explicabo facilis. Dignissimos nesciunt doloribus delectus dicta excepturi. Debitis officia, nisi error unde laudantium nulla iure distinctio fuga asperiores nihil magnam? Nesciunt omnis non distinctio harum amet sunt porro.</p> 
 </section3>
 
     <section4>
-   <img src="посилання04">
+   <img src="f4">
    <p>photodiary</p>
    <h2>Life tastes better with coffee</h2>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis, recusandae temporibus officiis soluta, accusantium at laudantium repellat, doloribus ducimus architecto molestiae est a. Ea culpa laboriosam, aliquid vel unde atque laudantium explicabo facilis. Dignissimos nesciunt doloribus delectus dicta excepturi. Debitis officia, nisi error unde laudantium nulla iure distinctio fuga asperiores nihil magnam? Nesciunt omnis non distinctio harum amet sunt porro.</p> 
