adding images new

--- a/index.html
+++ b/index.html
@@ -17,28 +17,28 @@
   </nav>
 
  <section1>
-   <img src="f1">
+   <img src="f1.jpg">
    <p>Livestyle</p>
      <h2>More than just a music festival</h2>
 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis, recusandae temporibus officiis soluta, accusantium at laudantium repellat, doloribus ducimus architecto molestiae est a. Ea culpa laboriosam, aliquid vel unde atque laudantium explicabo facilis. Dignissimos nesciunt doloribus delectus dicta excepturi. Debitis officia, nisi error unde laudantium nulla iure distinctio fuga asperiores nihil magnam? Nesciunt omnis non distinctio harum amet sunt porro.</p> 
   </section1>
   
   <section2>
-   <img src="f2">
+   <img src="f2.jpg">
    <p>Livestyle</p>
    <h2>Life tastes better with coffee</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis, recusandae temporibus officiis soluta, accusantium at laudantium repellat, doloribus ducimus architecto molestiae est a. Ea culpa laboriosam, aliquid vel unde atque laudantium explicabo facilis. Dignissimos nesciunt doloribus delectus dicta excepturi. Debitis officia, nisi error unde laudantium nulla iure distinctio fuga asperiores nihil magnam? Nesciunt omnis non distinctio harum amet sunt porro.</p> 
     </section2>
   
     <section3>
-   <img src="f3">
+   <img src="f3.jpg">
    <p>photodiary</p>
    <h2>American dream</h2>
    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis, recusandae temporibus officiis soluta, accusantium at laudantium repellat, doloribus ducimus architecto molestiae est a. Ea culpa laboriosam, aliquid vel unde atque laudantium explicabo facilis. Dignissimos nesciunt doloribus delectus dicta excepturi. Debitis officia, nisi error unde laudantium nulla iure distinctio fuga asperiores nihil magnam? Nesciunt omnis non distinctio harum amet sunt porro.</p> 
 </section3>
 
     <section4>
-   <img src="f4">
+   <img src="f4.jpg">
    <p>photodiary</p>
    <h2>Life tastes better with coffee</h2>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis, recusandae temporibus officiis soluta, accusantium at laudantium repellat, doloribus ducimus architecto molestiae est a. Ea culpa laboriosam, aliquid vel unde atque laudantium explicabo facilis. Dignissimos nesciunt doloribus delectus dicta excepturi. Debitis officia, nisi error unde laudantium nulla iure distinctio fuga asperiores nihil magnam? Nesciunt omnis non distinctio harum amet sunt porro.</p> 
